--- a/pages/conclusion.qmd
+++ b/pages/conclusion.qmd
@@ -2,6 +2,50 @@
 title: "Conclusion"
 ---
 
-# Conclusion
+## Summary of Findings
 
-Final takeaways and next steps.
+This project examined the relationship between brewery accessibility and median home
+values across Philadelphia census tracts. Results indicate that tracts located closer
+to breweries tend to exhibit higher median home values, with distance to the nearest
+brewery showing a moderate negative association with housing prices.
+
+While brewery count and density display weaker relationships with home values, proximity
+alone appears to capture an important spatial signal related to neighborhood amenities
+and urban development patterns.
+
+## Interpretation
+
+The findings suggest that breweries may function as indicators of broader neighborhood
+characteristics rather than acting as direct drivers of housing prices. Areas with
+higher brewery accessibility are often centrally located, mixed-use neighborhoods that
+also benefit from other amenities, services, and infrastructure associated with higher
+housing values.
+
+As such, brewery presence should be interpreted as part of a wider urban context rather
+than an isolated explanatory factor.
+
+## Limitations
+
+Several limitations should be noted:
+
+- Accessibility was measured using straight-line distance rather than true walking
+  distance along the street network.
+- Census tract centroids were used as neighborhood proxies and may not reflect where
+  residents live within each tract.
+- Median home values are influenced by many factors not included in this analysis,
+  such as income, zoning regulations, transit access, and school quality.
+
+These limitations mean results should be interpreted as associative rather than causal.
+
+## Future Work
+
+Future extensions of this analysis could include:
+
+- Network-based walking distance or travel time measures
+- Additional neighborhood covariates such as income, transit access, or land use
+- Temporal analysis to explore whether brewery openings precede changes in housing values
+- Comparative analysis across multiple cities
+
+Despite these limitations, this project demonstrates how integrating public APIs,
+census data, and spatial analysis can provide meaningful insights into urban amenity
+patterns and housing markets.
